some border radius updates to try and update look on iOS, other style updates to ensure compatibility across different browsers

--- a/code/src/components/name.css
+++ b/code/src/components/name.css
@@ -6,8 +6,12 @@
 
 .name-field {
   width: 96%;
+  height: 12px;
   margin-bottom: 5px;
   padding: 4px;
+  border: 1px solid #000;
+  -webkit-border-radius: 0;
+  border-radius: 0;
   resize: none;
   font-size: 10px;
 }
